fix: Use logical spacing

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -3475,7 +3475,7 @@ a.account__display-name {
     &__header {
       display: flex;
       align-items: center;
-      padding-right: 4px;
+      padding-inline-end: 4px;
 
       &__sep {
         width: 0;
